fix dropdown alignment

--- a/views/screen.scss
+++ b/views/screen.scss
@@ -644,7 +644,6 @@ a.char-chooser {
 
 .dropdown-value {
     cursor: pointer;
-    padding-right: 5px;
     background: url(/img/arrows.png) no-repeat right -120px transparent;
 
     &.active {
